--- a/my_wallet/templates/index.html
+++ b/my_wallet/templates/index.html
@@ -4,17 +4,13 @@
         <table>
             <tr>
                 <th>Fecha</th>
-                <th>Concepto</th>
-                <th>Importe</th>
+                <th>Hora</th>
+                <th>From</th>
+                <th>Q</th>
+                <th>To</th>
+                <th>Q</th>
+                <th>P.U</th>
             </tr>
-            {% for movement in the_movements%}
-            <tr>
-                <td>{{ movement.date }}</td>
-                <td>{{ movement.abstract }}</td>
-                <td>{{ movement.amount }} {{ movement.currency }}</td>
-                <td><a href="/update_movement/{{ movement.id }}">Editar</a></td>
-            </tr>
-            {% endfor %}
 
         </table>
 {% endblock %}
