cacharreandito un poco y pagina status agregada mañana mas y mejor

--- a/my_wallet/templates/index.html
+++ b/my_wallet/templates/index.html
@@ -3,8 +3,8 @@
         <h1>Mis movimientos</h1>
         <table>
             <tr>
-                <th>Fecha</th>
-                <th>Hora</th>
+                <th>Date</th>
+                <th>Hour</th>
                 <th>From</th>
                 <th>Q</th>
                 <th>To</th>
