--- a/my_wallet/templates/status.html
+++ b/my_wallet/templates/status.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content%}
-        <h1>Cripto Currency Values</h1>
-        
+        <h1>Summary Status</h1>
+
 
 {% endblock %}
