--- a/my_wallet/templates/index.html
+++ b/my_wallet/templates/index.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
 {% block content%}
+
         <h1>Mis movimientos</h1>
+        
         <table>
             <tr>
-                <th>Date</th>
-                <th>Hour</th>
+                <th>Date / Hour</th>
                 <th>From</th>
-                <th>Q</th>
+                <th>From Quantity</th>
                 <th>To</th>
-                <th>Q</th>
-                <th>P.U</th>
+                <th>Quantity to</th>
+                <th>Unit Price</th>
             </tr>
 
         </table>
