PORFIN SE MUESTRA LA BASE DE DATOS- proxima actualizacion muestra de campos en /purchase

--- a/my_wallet/templates/purchase.html
+++ b/my_wallet/templates/purchase.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content%}
-        <h1>Cripto Currency Values</h1>
+        <h1>cripto currency value and Purchase info</h1>
         
 
 {% endblock %}
