implementacion de base datos y wtforms, renderizado de wtform no conseguido aun, mañana mas y mejor

--- a/my_wallet/templates/purchase.html
+++ b/my_wallet/templates/purchase.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
-{% block content%}
-        <h1>cripto currency value and Purchase info</h1>
-        
 
+{% block content %}
+        <h1>cripto currency value and Purchase info</h1>
+        <form action="/purchase.html" method="post">
+        {{ the_form.csrf_token }}
+        <div>
+           {{ the_form.currency_in.label }}
+           <select name="{{ the_form.currency_in.name }}" id="{{ the_form.currency_in.id }}"></select>
+          
+                {% if the_form.currency_in.errors %}
+              {% for mensaje in the_form.currency_in.errors %}
+                <p class="error">{{ mensaje }}</p>
+              {% endfor %}
+           {% endif %}
+        </div>
+        </form>  
 {% endblock %}
