--- a/my_wallet/templates/base.html
+++ b/my_wallet/templates/base.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <link rel="stylesheet" href="/static/style/pico.css">
+    <link rel="stylesheet" href="/static/style/style.css">
     <title>My Wallet - {{ title }}</title>
 </head>
 <body>
