--- a/my_wallet/templates/status.html
+++ b/my_wallet/templates/status.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 {% block content%}
+
         <h1>Summary Status</h1>
-
-
+        
+        <table>
+            <tr>
+                <th>Currency</th>
+                <th>Quantity</th>
+                <th>Amount Invested</th>
+            </tr>
+        </table>
 {% endblock %}
