comienzo de la ruta status, porfin logro que capture los valores de los currency en la base de datos

--- a/my_wallet/templates/status.html
+++ b/my_wallet/templates/status.html
@@ -5,9 +5,11 @@
         
         <table>
             <tr>
+                <div class="grid-container">
                 <th>Currency</th>
                 <th>Quantity</th>
                 <th>Amount Invested</th>
+                </div>
             </tr>
         </table>
 {% endblock %}
