PORFIN TERMINADO SE ES ESPERA UN ACTUALIZACION MAS

--- a/my_wallet/templates/base.html
+++ b/my_wallet/templates/base.html
@@ -52,7 +52,7 @@
         {% block content %}{% endblock %}
     </main>
     <footer>
-        <p class="container">&copy; 2023 - J.Cusati</p>
+        <p class="container">&copy; 2023 - J.Cusati Villasmil</p>
     </footer>
 </body>
 </html>
