--- a/my_wallet/templates/status.html
+++ b/my_wallet/templates/status.html
@@ -17,14 +17,23 @@
 
                     
                     <td>
-                        {% if currency in stats %}
                             {{ stats[currency].cantidad_multiplicada }}
-                        {% else %}
-                            N/A
-                        {% endif %}
+                            
                     </td>
                 </tr>
             {% endif %}
         {% endfor %}
     </table>
+    <h6>Valor En Euros: {{ total_inversion }} Eur</h6>
+
+
+
+    {% for currency, data in original_stats.items() %}
+        {% if currency == "EUR" %}
+            <h6>Total de inversion en Euros: {{  data.quantity_from }}</h6>
+        {% endif %}
+    {% endfor %}
+
+
+    <h6>Resultado De La Inversion: {{ total_inversion_euro }}</h6>
 {% endblock %}
