--- a/my_wallet/templates/status.html
+++ b/my_wallet/templates/status.html
@@ -2,38 +2,45 @@
 
 {% block content %}
     <h1>Estado Resumen</h1>
-    <table>
-        <tr>
-            <th>Moneda</th>
-            <th>Cantidad Actual</th>
-            <th>Valor en Euros</th>
-        </tr>
-        {% for currency, data in original_stats.items() %}
-            {% if currency != "EUR" %}
-                <tr>
-                    <td>{{ currency }}</td>
-                    
-                    <td>{{ data.quantity_to - data.quantity_from }}</td>
+    {% if original_stats %}
+        <table>
+            <tr>
+                <th>Moneda</th>
+                <th>Cantidad Actual</th>
+                <th>Valor en Euros</th>
+            </tr>
+            {% for currency, data in original_stats.items() %}
+                {% if currency != "EUR" and data.quantity_to is not none and data.quantity_from is not none %}
+                    <tr>
+                        <td>{{ currency }}</td>
+                        
+                        <td>{{ data.quantity_to - data.quantity_from }}</td>
 
-                    
-                    <td>
-                            {{ stats[currency].cantidad_multiplicada }}
-                            
-                    </td>
-                </tr>
-            {% endif %}
-        {% endfor %}
-    </table>
-    <h6>Valor En Euros: {{ total_inversion }} Eur</h6>
-
-
-
+                        
+                        <td>
+                            {% if stats[currency].cantidad_multiplicada is not none %}
+                                {{ stats[currency].cantidad_multiplicada }}
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endif %}
+            {% endfor %}
+        </table>
+    {% else %}
+        <p>No hay datos disponibles.</p>
+    {% endif %}
+    
     {% for currency, data in original_stats.items() %}
-        {% if currency == "EUR" %}
-            <h6>Total de inversion en Euros: {{  data.quantity_from }}</h6>
+        {% if currency == "EUR" and data.quantity_from is not none %}
+            <h6>Total de inversion en Euros: {{ data.quantity_from }}</h6>
         {% endif %}
     {% endfor %}
-
-
-    <h6>Resultado De La Inversion: {{ total_inversion_euro }}</h6>
+    
+    {% if total_inversion is not none %}
+        <h6>Valor En Euros: {{ total_inversion }} Eur</h6>
+    {% endif %}
+    
+    {% if total_inversion_euro is not none %}
+        <h6>Resultado De La Inversion: {{ total_inversion_euro }}</h6>
+    {% endif %}
 {% endblock %}
