ULTIMO COMMIT creo... arreglado y testeado errores se hizo el cambio de verificacion si hay monedas disponibles en el calculo ya no esta la comprobacion al hacer click en el boton comprar, ya el acceso a la base de datos no es una ruta fija ahora es dinamica y se puede especificar en el app.config, se arreglo el calculo de status aun sigo haciendo pruebas

--- a/my_wallet/templates/status.html
+++ b/my_wallet/templates/status.html
@@ -29,7 +29,7 @@
     
     {% for currency, data in original_stats.items() %}
         {% if currency == "EUR" and data.quantity_from is not none %}
-            <h6>Total de inversión en Euros: {{ data.quantity_from }}</h6>
+            <h6>Total de inversión en Euros: {{ data.quantity_to - data.quantity_from  }}</h6>
         {% endif %}
     {% endfor %}
     
